--- a/OrderService/src/main/resources/application.properties
+++ b/OrderService/src/main/resources/application.properties
@@ -14,3 +14,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sangamprasad1993@gmail.com  
+spring.mail.password=zbds dmku jgne ninc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
